added theme entry as Home.html in template folder and fixed join-us module font size error

--- a/modules/upper_section_module.module/module.html
+++ b/modules/upper_section_module.module/module.html
@@ -1,4 +1,4 @@
-<section class="section_wrapper">
+<div class="section_wrapper">
   
   <div class="section_inner_image_wrapper">
     {% if module.upper_section_image.src %}
